- Fixed bug #24582 (extensions can not be loaded dynamically in Solaris/iPlanet)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@153735 c90b9560-bf6c-de11-be94-00142212c4b1